<resources>
    <string name="app_name">Typecle</string>
    <string name="title_activity_login">Login in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_reg">Register</string>
    <string name="action_sign_in_short">Create Account</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_menu">Typecle</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="mode_free_type">Free Type</string>
    <string name="mode_perfect_run">Perfect Run</string>
    <string name="mode_timed_trial">Timed Trial</string>
    <string name="mode_keep_up">Keep Up</string>

    <string name="menu_home">Home</string>
    <string name="menu_leader">Scores</string>
    <string name="menu_option">Options</string>
    <string name="menu_logout">Log out</string>

    <string name="home_title">Select Game Mode</string>

    <!-- Game Stats -->
    <string name="mistakes_label">Mistakes: </string>
    <string name="wpm_label">WPM: </string>
    <string name="time_label">Time: </string>
</resources>
