<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">


    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/home_title"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <Button
        android:id="@+id/button_free_type"
        android:layout_width="@dimen/home_buttons_width"
        android:layout_height="@dimen/home_buttons_height"
        android:text="@string/mode_free_type"
        app:layout_constraintBottom_toTopOf="@+id/button_timed_trial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home"
        android:onClick="openFreeRun"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button_timed_trial"
        android:layout_width="@dimen/home_buttons_width"
        android:layout_height="@dimen/home_buttons_height"
        android:text="@string/mode_timed_trial"
        app:layout_constraintBottom_toTopOf="@+id/button_perfect_run"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_free_type"
        android:onClick="openTimeTrial"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button_perfect_run"
        android:layout_width="@dimen/home_buttons_width"
        android:layout_height="@dimen/home_buttons_height"
        android:text="@string/mode_perfect_run"
        app:layout_constraintBottom_toTopOf="@+id/button_keep_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_timed_trial"
        android:onClick="openPerfectRun"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button_keep_up"
        android:layout_width="@dimen/home_buttons_width"
        android:layout_height="@dimen/home_buttons_height"
        android:text="@string/mode_keep_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_perfect_run"
        android:onClick="openKeepUp"
        tools:ignore="OnClick" />

</androidx.constraintlayout.widget.ConstraintLayout>