<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/result_rel_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/result_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Results"
        android:textSize="@dimen/text_size"
        tools:layout_editor_absoluteX="181dp" />



    <LinearLayout
        android:id="@+id/result_lin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="50dp"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/result_mistake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mistakes_label"
            android:textSize="@dimen/text_size"
            android:padding="5dp"
            />

        <TextView
            android:id="@+id/result_wpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wpm_label"
            android:textSize="@dimen/text_size"
            android:padding="5dp" />

        <TextView
            android:id="@+id/result_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_label"
            android:textSize="@dimen/text_size"
            android:padding="5dp" />


        <Button
            android:id="@+id/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/result_btn_margin"
            android:layout_weight="1"
            android:onClick="killGame"
            android:text="Back To Main Menu" />

        <Button
            android:id="@+id/restart_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/result_btn_margin"
            android:layout_weight="1"
            android:onClick="endGameReset"
            android:text="Restart" />

        <Button
            android:id="@+id/url_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/result_btn_margin"
            android:layout_weight="1"
            android:onClick="openLink"
            android:text="Open Article in Browser" />
    </LinearLayout>

</RelativeLayout>